# ztp

./: Cargo.toml  Configuration.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
config/: base.toml
scripts/: init_db.sh
src/lib/: configuration.rs  mod.rs  startup.rs  telemetry.rs
src/lib/routes/: subscriptions.rs
tests/: health_check.rs
