[package]
name = "ztp"
version = "0.1.0"
edition = "2021"

[lib]
name = "ztplib"
path = "src/lib/mod.rs"

[[bin]]
name = "ztp"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
actix-web = "4.4.0"
once_cell = "1.19.0"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3.18", features = [
	"registry",
	"env-filter",
] }

[dev-dependencies]
reqwest = "0.11.23"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",

]
